<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_dashboard"
            android:fontFamily="@font/opensans"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:layout_margin="20dp"
            tools:ignore="HardcodedText" />
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:rowCount="4"
            android:columnCount="2"
            android:layout_margin="5dp"
            android:alignmentMode="alignMargins"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardDonate"
                android:clickable="true"
                android:layout_width="165dp"
                android:layout_height="165dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/gray"
                android:layout_margin="10dp"
                android:focusable="true">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/donate"
                    tools:ignore="ImageContrastCheck" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Donate"
                        android:fontFamily="@font/opensans"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:layout_marginTop="130dp"
                        android:layout_gravity="center_horizontal" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardReceive"
                android:clickable="true"
                android:layout_width="165dp"
                android:layout_height="165dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/gray"
                android:layout_margin="10dp"
                android:focusable="true">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/TODO"
                    android:src="@drawable/rcv"
                    tools:ignore="ImageContrastCheck" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/receive"
                        android:fontFamily="@font/opensans"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:layout_marginTop="130dp"
                        android:layout_gravity="center_horizontal"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardFoodmap"
                android:clickable="true"
                android:layout_width="165dp"
                android:layout_height="165dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/gray"
                android:layout_margin="10dp"
                android:focusable="true">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/TODO1"
                    android:src="@drawable/map"
                    tools:ignore="ImageContrastCheck" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/food_map"
                    android:fontFamily="@font/opensans"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="130dp"
                    android:layout_gravity="center_horizontal"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardMyPin"
                android:clickable="true"
                android:layout_width="165dp"
                android:layout_height="165dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/gray"
                android:layout_margin="10dp"
                android:focusable="true">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/todo2"
                    android:src="@drawable/mypins"
                    tools:ignore="ImageContrastCheck,ImageContrastCheck" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_pins"
                    android:fontFamily="@font/opensans"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="130dp"
                    android:layout_gravity="center_horizontal" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardHistory"
                android:clickable="true"
                android:layout_width="165dp"
                android:layout_height="165dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/gray"
                android:layout_margin="10dp"
                android:focusable="true">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/todo3"
                    android:src="@drawable/history"
                    tools:ignore="ImageContrastCheck" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/History"
                    android:fontFamily="@font/opensans"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="130dp"
                    android:layout_gravity="center_horizontal" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardAboutus"
                android:clickable="true"
                android:layout_width="165dp"
                android:layout_height="165dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/gray"
                android:layout_margin="10dp"
                android:focusable="true">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/todo4"
                    android:src="@drawable/about"
                    tools:ignore="ImageContrastCheck" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about_us"
                    android:fontFamily="@font/opensans"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="130dp"
                    android:layout_gravity="center_horizontal"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardContact"
                android:clickable="true"
                android:layout_width="165dp"
                android:layout_height="165dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/gray"
                android:layout_margin="10dp"
                android:focusable="true">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/todo5"
                    android:src="@drawable/contact"
                    tools:ignore="ImageContrastCheck" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_us"
                    android:fontFamily="@font/opensans"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="130dp"
                    android:layout_gravity="center_horizontal"/>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardLogout"
                android:clickable="true"
                android:layout_width="165dp"
                android:layout_height="165dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/gray"
                android:layout_margin="10dp"
                android:focusable="true">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="15dp"
                    android:contentDescription="@string/todo6"
                    android:src="@drawable/lgout"
                    tools:ignore="ImageContrastCheck,ImageContrastCheck" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_out"
                    android:fontFamily="@font/opensans"
                    android:textSize="18sp"
                    android:textColor="@color/white"
                    android:layout_marginTop="130dp"
                    android:layout_gravity="center_horizontal"/>
            </androidx.cardview.widget.CardView>

        </GridLayout>
    </LinearLayout>
</ScrollView>